--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing : antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color       : rgb(11, 8, 8);
+  background-color       : #1B1F3B;
+  font-family            : 'Verdana';
 }
 
 code {
