--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  margin                 : 0;
+  /* font-family         : -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing : antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    sans-serif; */
+  /* -webkit-font-smoothing : antialiased;
+  -moz-osx-font-smoothing: grayscale; */
   background-color       : rgb(11, 8, 8);
   background-color       : #1B1F3B;
-  font-family            : 'Verdana';
+  /* font-family            : 'Verdana'; */
+
+  font-family: veneer-three, sans-serif;
+  font-style : normal;
+  font-weight: 500;
+
 }
 
 code {
