--- a/src/Components/Base.css
+++ b/src/Components/Base.css
@@ -1,23 +1,24 @@
 .base {
-    padding-top: 50px;
-    display    : flow-root;
+    /* padding-top: 50px; */
+    display: flow-root;
 }
 
 .leftPan {
-    text-align: center;
-    float     : left;
+    text-align   : center;
+    /* float     : left; */
 }
 
 .leftPan .description {
-    padding-top   : 5px;
-    padding-bottom: 10px;
-    text-align    : left;
-    padding-left  : 70px;
+    padding-top      : 5px;
+    padding-bottom   : 10px;
+    /* text-align    : left; */
+    /* padding-left  : 70px; */
 }
 
 .oneLine {
-    color: aqua;
-    text-shadow: -2px -2px #ff0000;
+    color         : aqua;
+    color         : rgb(4, 1, 61);
+    /* text-shadow: -2px -2px #ff0000; */
 }
 
 .oneLine1 {
@@ -85,6 +86,16 @@
     padding-right        : 10px;
 }
 
+.mobile-landing {
+    background-image     : url("../images/cr3-rm.png");
+    background-repeat    : no-repeat;
+    background-size      : contain;
+    background-attachment: fixed;
+    background-position-y: 50px;
+    padding              : 0px !important;
+    height               : 380px;
+}
+
 .pages {
     padding-bottom: 10px;
 }
@@ -98,23 +109,48 @@
 }
 
 .content {
-    background-color: white;
-    background-color: ghostwhite;
-    background-color: #2e2d3c;
-    border-radius   : 5px;
-    color           : #1B1F3B;
-    padding         : 20px;
-    padding-right   : 0px;
-    width           : 95%;
+    /* background-color: white; */
+    /* background-color: ghostwhite; */
+    /* background-color: #2e2d3c; */
+    border-radius            : 5px;
+    color                    : #1B1F3B;
+    /* padding               : 20px; */
+    /* padding-right         : 0px; */
+    /* width                 : 95%; */
+}
+
+.app-bar {
+    background-image     : url("../images/vanghogh-back.png");
+    background-repeat    : no-repeat;
+    background-size      : cover;
+    background-attachment: fixed;
+}
+
+.home-back {
+    height               : 600px;
+    background-image     : url("../images/litupface.png");
+    background-repeat    : no-repeat;
+    background-size      : cover;
+    background-attachment: fixed;
+    border-radius        : 10px;
+
 }
 
 .bottom-wrapper {
-    bottom        : 0px;
-    padding       : 20px;
-    padding-bottom: 5px !important;
-    text-align    : center;
-    color         : rgb(105, 105, 213);
-    font-size     : 10px;
+    bottom                        : 0px;
+    padding                       : 20px;
+    /* padding-bottom             : 10px !important; */
+    text-align                    : center;
+    color                         : rgb(105, 105, 213);
+    font-size                     : 10px;
+    background-color              : #222;
+    -webkit-box-shadow            : 0 5px 35px 0 blueviolet;
+    -moz-box-shadow               : 0 5px 35px 0 blueviolet;
+    box-shadow                    : 0 5px 35px 0 blueviolet;
+    /* background-image           : url("../images/BackFill1.png");
+    background-repeat             : no-repeat;
+    background-size               : cover;
+    background-attachment         : fixed; */
 }
 
 .bottom-content {
@@ -123,17 +159,36 @@
 }
 
 .border-content {
-    margin      : 20px;
-    padding     : 15px;
-    padding-left: 25px;
-    font-size   : 75px !important;
+    /* margin      : 20px; */
+    /* padding     : 15px; */
+    /* padding-left: 25px; */
+    padding-bottom: 15px;
+    font-size     : 100px !important;
+    text-shadow   : 5px 5px 5px silver;
+}
+
+.border-content-small {
+    /* margin      : 20px; */
+    /* padding     : 15px; */
+    /* padding-left: 25px; */
+    padding-bottom: 15px;
+    font-size     : 70px !important;
+    text-align    : left;
+    text-shadow   : 5px 5px 5px silver;
+}
+
+.border-content-small .small {
+    font-size  : 35px;
+    font-family: 'Times New Roman', Times, serif;
+    font-style : italic;
 }
 
 .workList {
-    width       : 100%;
-    display     : block;
-    padding     : 10px;
-    padding-left: 25px;
+    width         : 100%;
+    display       : block;
+    padding       : 0px;
+    padding-left  : 10px;
+    padding-bottom: 20px;
 }
 
 .splitter {
@@ -149,9 +204,9 @@
 }
 
 .company {
-    padding         : 20px;
-    background-color: #04032a !important;
-    color           : silver !important;
+    padding            : 20px;
+    /* background-color: #04032a !important; */
+    /* color           : silver !important; */
 }
 
 .company img {
@@ -183,7 +238,7 @@
 }
 
 .listIconArtist {
-    background-color         : #7481e2;
+    /* background-color         : #7481e2; */
     padding                  : 5px;
     margin-right             : 10px;
     border-top-left-radius   : 5px;
@@ -191,21 +246,26 @@
 }
 
 .listTextArtist {
-    color             : whitesmoke;
-    background-color  : #1B1F3B;
-    padding           : 10px 25px;
-    margin-left       : -40px;
-    border-radius     : 5px;
-    font-weight       : bold !important;
-    -webkit-box-shadow: inset 10px 0 0 0 #7481e2;
-    -moz-box-shadow   : inset 10px 0 0 0 #7481e2;
-    box-shadow        : inset 10px 0 0 0 #7481e2;
+    /* color             : whitesmoke;
+    background-color  : #1B1F3B; */
+    /* background           : white; */
+    padding                 : 10px 25px;
+    margin-left             : -40px;
+    border-radius           : 4px;
+    font-weight             : bold !important;
+    /* -webkit-box-shadow   : inset 10px 0 0 0 #7481e2;
+    -moz-box-shadow         : inset 10px 0 0 0 #7481e2;
+    box-shadow              : inset 10px 0 0 0 #7481e2; */
+    /* -webkit-box-shadow   : inset 10px 0 0 0 #1B1F3B;
+    -moz-box-shadow         : inset 10px 0 0 0 #1B1F3B;
+    box-shadow              : inset 10px 0 0 0 #1B1F3B; */
+    /* border               : 1px solid #1B1F3B; */
 }
 
 .chip {
-    padding  : 10px;
-    margin   : 20px;
-    display  : block;
+    padding: 10px;
+    margin : 20px;
+    display: block;
 }
 
 @media (max-width: 900px) {
@@ -219,16 +279,29 @@
     }
 
     .oneLine {
-        padding   : 10px !important;
-        font-size : 55px !important;
-        text-align: center !important;
+        padding    : 10px !important;
+        font-size  : 55px !important;
+        text-align : center !important;
         font-weight: bolder !important;
     }
 
     .border-content {
-        margin   : 20px !important;
-        padding  : 10px !important;
-        font-size: 45px !important;
+        /* margin    : 5px !important; */
+        padding    : 10px !important;
+        font-size  : 65px !important;
+        font-weight: bold;
+        text-align : left !important;
+    }
+
+    .border-content-small {
+        font-size    : 45px !important;
+        /* text-align: center; */
+    }
+
+    .border-content-small .small {
+        font-size  : 22px;
+        font-family: 'Times New Roman', Times, serif;
+        font-style : italic;
     }
 
     .workList {
