--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,25 @@
 body {
-  margin                 : 0;
-  /* font-family         : -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  margin: 0;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
-  /* -webkit-font-smoothing : antialiased;
-  -moz-osx-font-smoothing: grayscale; */
-  background-color       : rgb(11, 8, 8);
-  background-color       : #1B1F3B;
-  /* font-family            : 'Verdana'; */
+  -webkit-font-smoothing                                  : antialiased;
+  -moz-osx-font-smoothing                                 : grayscale;
+  background-image                                        : url("./images/white.png");
+  font-family                                             : Arial, Helvetica, sans-serif;
+  /* font-style                                           : italic; */
+  /* font-style                                           : normal;
+  font-weight                                             : 500; */
+  /* background-color                                     : ghostwhite; */
+  /* background-color                                     : black; */
+  /* background-repeat                                    : no-repeat;
+  background-size                                         : cover; */
+  /* font-family                                          : veneer-three, sans-serif; */
 
-  font-family: veneer-three, sans-serif;
-  font-style : normal;
-  font-weight: 500;
-
+  /* background-image     : url("./images/cr1.png");
+  background-repeat    : no-repeat;
+  background-size      : cover;
+  background-attachment: fixed; */
 }
 
 code {
