--- a/src/Components/Base.css
+++ b/src/Components/Base.css
@@ -61,19 +61,19 @@
 }
 
 .imageSet {
-    height            : 400px;
-    width             : 400px;
-    border-radius     : 400px;
-    -webkit-box-shadow: 0 0 10px 0 silver;
-    -moz-box-shadow   : 0 0 10px 0 silver;
-    box-shadow        : 0 0 10px 0 silver;
+    height               : 400px;
+    width                : 400px;
+    border-radius        : 400px;
+    -webkit-box-shadow   : 0 0 10px 0 silver;
+    -moz-box-shadow      : 0 0 10px 0 silver;
+    box-shadow           : 0 0 10px 0 silver;
     /* background-color  : #444; */
-    background-color  : rgb(61, 53, 43);
-    background-color  : whitesmoke;
+    background-color     : rgb(61, 53, 43);
+    background-color     : whitesmoke;
     /* background-color  : #2e2d5d; */
-    background-color  : gold;
-    padding           : 10px;
-    padding-right     : 10px;
+    background-color     : gold;
+    padding              : 10px;
+    padding-right        : 10px;
 }
 
 .imageSetSmall {
@@ -122,6 +122,7 @@
     /* background-color: #2e2d3c; */
     border-radius            : 5px;
     color                    : #1B1F3B;
+    /* background-color         : goldenrod; */
     /* padding               : 20px; */
     /* padding-right         : 0px; */
     /* width                 : 95%; */
